--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^14.4.3",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.1",
+    "lodash": "^4.17.21",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
@@ -20,7 +21,8 @@
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
     "typewriter-effect": "^2.19.0",
-    "web-vitals": "^3.0.2"
+    "web-vitals": "^3.0.2",
+    "worker-loader": "^3.0.8"
   },
   "scripts": {
     "start": "react-scripts start",
