--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-pdf": "^5.7.2",
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
+    "swiper": "^9.3.2",
     "typewriter-effect": "^2.19.0",
     "web-vitals": "^3.0.2",
     "worker-loader": "^3.0.8"
