--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
+    "react-ga4": "^2.1.0",
     "react-github-calendar": "^3.3.4",
     "react-icons": "^4.4.0",
     "react-parallax-tilt": "^1.7.66",
