--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,15 +30,27 @@ jobs:
       - name: Copy build settings to build folder
         run: cp netlify.toml build/
 
-      # deploy application to netlify
-      - name: Deploy production to Netlify
-        uses: South-Paw/action-netlify-deploy@v1.2.0
+      - name: Codecov
+        uses: codecov/codecov-action@v2.1.0
+  
+      - name: Netlify Deploy
+        # uses: jsmrcaga/action-netlify-deploy@v1.7.1
+  
         env:
+          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
+          NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
           REACT_APP_GOOGLE_MEASUREMENT_ID: ${{ secrets.REACT_APP_GOOGLE_MEASUREMENT_ID}}
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          netlify-auth-token: ${{ secrets.NETLIFY_AUTH_TOKEN }}
-          netlify-site-id: ${{ secrets.NETLIFY_SITE_ID }}
+        run: netlify deploy --prod
 
-          build-dir: "./build"
-          comment-on-commit: true
+      # # deploy application to netlify
+      # - name: Deploy production to Netlify
+      #   uses: South-Paw/action-netlify-deploy@v1.2.0
+      #   env:
+      #     REACT_APP_GOOGLE_MEASUREMENT_ID: ${{ secrets.REACT_APP_GOOGLE_MEASUREMENT_ID}}
+      #   with:
+      #     github-token: ${{ secrets.GITHUB_TOKEN }}
+      #     netlify-auth-token: ${{ secrets.NETLIFY_AUTH_TOKEN }}
+      #     netlify-site-id: ${{ secrets.NETLIFY_SITE_ID }}
+
+      #     build-dir: "./build"
+      #     comment-on-commit: true
